2005-01-19 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/c2hs/c/CLexer.hs: make c2hs understand the __signed,
	__signed__, __volatile and __volatile__ portability keyword synonyms.

2005-01-18 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/c2hs/c/CLexer.hs: trivial fix to allows c2hs to process the
	glib/gtk 2.6 headders.

	* gtk/Graphics/UI/Gtk/TreeList/TreeStore.chs.pp,
	gtk/Graphics/UI/Gtk/TreeList/ListStore.chs.pp: cope with building
	against Gtk+ version 2.1.0 which is a version that Sun shipped with
	its version of Gnome 2.

	* acinclude.m4: add a macro to deal with a hack on Linux systems where
	GHCi cannot load the pthread library. Everything still works if we
	just strip out the -lpthread flag because pthread is a dependency of
	other libraries I guess.

	* configure.ac: 
	1. Do not build GHCi .o files on Solaris because it does not work due
	to ghc-pkg using an incorrect linker command.
	2. Add a hack to add a runtime library search path when linking
	programs that use mozembed.
	3. Use the above mentioned pthread hack for each package that uses
	pthread.
	4. Define some extra conditionals for Gtk versions so we know which
	demos to build upon make installcheck.
	5. Also add a work around for a broken development version of Gtk that
	Sun decided to ship.

	* Makefile.am:
	1. Revert patch to build GHCi .o files ourselves, instead leave it up
	to ghc-pkg -g as we did before.
	2. Make building GHCi .o files conditional on the Soalris test from
	configure.
	3. Make sure to remove the previous GHCi .o file otherwise ghc-pkg does
	not re-generate it which would lead to problems for people upgrading.
	4. Arrandge for only the appropriate demos to be built and support
	building them with a non-default package.conf location and with older
	ghc versions that do not support "auto" packages.
	5. Change the install location of gtk2hs.haddock from 
	$(datadir)/doc/gtk2hs/html/ to just $(datadir)/doc/gtk2hs/ to conform
	with the cabal haddock convention.
