@@ -1,3 +1,8 @@
+2005-01-20 Duncan Coutts <duncan@coutts.uklinux.net>
+
+	* Makefile.am: make each package's LIBS include the LIBS of its
+	dependent packages, which is the same as we do for the CFLAGS.
+
 2005-01-19 Duncan Coutts <duncan@coutts.uklinux.net>
 
 	* tools/c2hs/c/CLexer.hs: make c2hs understand the __signed,
